parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> _1_optional _2_optional
Rule 2     _1_optional -> NEWLINE
Rule 3     _1_optional -> <empty>
Rule 4     _2_optional -> do_exprs
Rule 5     _2_optional -> <empty>
Rule 6     do_exprs -> expr _3_optional
Rule 7     _3_optional -> NEWLINE
Rule 8     _3_optional -> <empty>
Rule 9     do_exprs -> expr NEWLINE do_exprs
Rule 10    expr -> ( expr )  [precedence=left, level=8]
Rule 11    expr -> unary_expr
Rule 12    expr -> str_literal
Rule 13    expr -> float_literal
Rule 14    expr -> int_literal
Rule 15    expr -> array
Rule 16    expr -> variant_call
Rule 17    expr -> identifier
Rule 18    expr -> let
Rule 19    expr -> call
Rule 20    expr -> case_of
Rule 21    expr -> binary_expr
Rule 22    expr -> if_expr
Rule 23    expr -> def_expr
Rule 24    expr -> do
Rule 25    expr -> external
Rule 26    expr -> enum
Rule 27    unary_expr -> - expr  [precedence=right, level=7]
Rule 28    external -> EXTERNAL
Rule 29    binary_expr -> expr EQUAL expr  [precedence=left, level=2]
Rule 30    binary_expr -> expr NOT_EQUAL expr  [precedence=left, level=2]
Rule 31    binary_expr -> expr | expr  [precedence=right, level=4]
Rule 32    binary_expr -> expr > expr  [precedence=left, level=3]
Rule 33    binary_expr -> expr FLOAT_MUL expr  [precedence=left, level=6]
Rule 34    binary_expr -> expr FLOAT_DIV expr  [precedence=left, level=6]
Rule 35    binary_expr -> expr FLOAT_SUB expr  [precedence=left, level=5]
Rule 36    binary_expr -> expr FLOAT_SUM expr  [precedence=left, level=5]
Rule 37    binary_expr -> expr < expr  [precedence=left, level=3]
Rule 38    binary_expr -> expr * expr  [precedence=left, level=6]
Rule 39    binary_expr -> expr / expr  [precedence=left, level=6]
Rule 40    binary_expr -> expr - expr  [precedence=left, level=5]
Rule 41    binary_expr -> expr + expr  [precedence=left, level=5]
Rule 42    binary_expr -> expr CONCAT expr  [precedence=right, level=4]
Rule 43    do -> DO _4_optional block_statement END
Rule 44    _4_optional -> : type
Rule 45    _4_optional -> <empty>
Rule 46    block_statement -> _5_optional _6_optional
Rule 47    _5_optional -> NEWLINE
Rule 48    _5_optional -> <empty>
Rule 49    _6_optional -> do_exprs
Rule 50    _6_optional -> <empty>
Rule 51    def_expr -> DEF identifier ( _7_optional _8_optional ) _9_optional do  [precedence=left, level=8]
Rule 52    _7_optional -> NEWLINE
Rule 53    _7_optional -> <empty>
Rule 54    _8_optional -> params
Rule 55    _8_optional -> <empty>
Rule 56    _9_optional -> : type
Rule 57    _9_optional -> <empty>
Rule 58    def_expr -> DEF identifier < type_identifier _10_repeat > ( _11_optional _12_optional ) _13_optional do  [precedence=left, level=8]
Rule 59    _10_repeat -> _10_items
Rule 60    _10_repeat -> <empty>
Rule 61    _10_items -> _10_items _10_item
Rule 62    _10_items -> _10_item
Rule 63    _10_item -> , type_identifier
Rule 64    _11_optional -> NEWLINE
Rule 65    _11_optional -> <empty>
Rule 66    _12_optional -> params
Rule 67    _12_optional -> <empty>
Rule 68    _13_optional -> : type
Rule 69    _13_optional -> <empty>
Rule 70    params -> param _14_optional
Rule 71    _14_optional -> NEWLINE
Rule 72    _14_optional -> <empty>
Rule 73    params -> params , _15_optional param _16_optional
Rule 74    _15_optional -> NEWLINE
Rule 75    _15_optional -> <empty>
Rule 76    _16_optional -> NEWLINE
Rule 77    _16_optional -> <empty>
Rule 78    type -> type_identifier < type _17_repeat >  [precedence=left, level=3]
Rule 79    _17_repeat -> _17_items
Rule 80    _17_repeat -> <empty>
Rule 81    _17_items -> _17_items _17_item
Rule 82    _17_items -> _17_item
Rule 83    _17_item -> , type
Rule 84    type -> type_identifier
Rule 85    enum -> ENUM type_identifier { _18_optional _19_optional }
Rule 86    _18_optional -> NEWLINE
Rule 87    _18_optional -> <empty>
Rule 88    _19_optional -> variants
Rule 89    _19_optional -> <empty>
Rule 90    enum -> ENUM type_identifier < type_identifier _20_repeat > { _21_optional _22_optional }
Rule 91    _20_repeat -> _20_items
Rule 92    _20_repeat -> <empty>
Rule 93    _20_items -> _20_items _20_item
Rule 94    _20_items -> _20_item
Rule 95    _20_item -> , type_identifier
Rule 96    _21_optional -> NEWLINE
Rule 97    _21_optional -> <empty>
Rule 98    _22_optional -> variants
Rule 99    _22_optional -> <empty>
Rule 100   variants -> variant _23_optional
Rule 101   _23_optional -> NEWLINE
Rule 102   _23_optional -> <empty>
Rule 103   variants -> variants variant _24_optional
Rule 104   _24_optional -> NEWLINE
Rule 105   _24_optional -> <empty>
Rule 106   variant -> type_identifier
Rule 107   variant -> type_identifier ( type _25_repeat )  [precedence=left, level=8]
Rule 108   _25_repeat -> _25_items
Rule 109   _25_repeat -> <empty>
Rule 110   _25_items -> _25_items _25_item
Rule 111   _25_items -> _25_item
Rule 112   _25_item -> , type
Rule 113   param -> identifier _26_optional
Rule 114   _26_optional -> : type
Rule 115   _26_optional -> <empty>
Rule 116   if_expr -> IF expr THEN _27_optional block_statement _28_optional END
Rule 117   _27_optional -> : type
Rule 118   _27_optional -> <empty>
Rule 119   _28_optional -> or_else
Rule 120   _28_optional -> <empty>
Rule 121   or_else -> ELIF expr THEN block_statement _29_optional
Rule 122   _29_optional -> or_else
Rule 123   _29_optional -> <empty>
Rule 124   or_else -> ELSE block_statement
Rule 125   case_of -> CASE expr OF _30_optional _31_optional END
Rule 126   _30_optional -> NEWLINE
Rule 127   _30_optional -> <empty>
Rule 128   _31_optional -> cases
Rule 129   _31_optional -> <empty>
Rule 130   cases -> pattern do _32_optional
Rule 131   _32_optional -> NEWLINE
Rule 132   _32_optional -> <empty>
Rule 133   cases -> cases pattern do _33_optional
Rule 134   _33_optional -> NEWLINE
Rule 135   _33_optional -> <empty>
Rule 136   pattern -> match_variant
Rule 137   pattern -> match_as
Rule 138   match_as -> identifier
Rule 139   match_variant -> type_identifier
Rule 140   match_variant -> type_identifier ( _34_optional _35_optional )  [precedence=left, level=8]
Rule 141   _34_optional -> NEWLINE
Rule 142   _34_optional -> <empty>
Rule 143   _35_optional -> patterns
Rule 144   _35_optional -> <empty>
Rule 145   patterns -> pattern _36_optional
Rule 146   _36_optional -> NEWLINE
Rule 147   _36_optional -> <empty>
Rule 148   patterns -> patterns , _37_optional pattern _38_optional
Rule 149   _37_optional -> NEWLINE
Rule 150   _37_optional -> <empty>
Rule 151   _38_optional -> NEWLINE
Rule 152   _38_optional -> <empty>
Rule 153   array -> [ _39_optional _40_optional ]
Rule 154   _39_optional -> NEWLINE
Rule 155   _39_optional -> <empty>
Rule 156   _40_optional -> exprs
Rule 157   _40_optional -> <empty>
Rule 158   call -> expr ( _41_optional _42_optional )  [precedence=left, level=8]
Rule 159   _41_optional -> NEWLINE
Rule 160   _41_optional -> <empty>
Rule 161   _42_optional -> exprs
Rule 162   _42_optional -> <empty>
Rule 163   variant_call -> type_identifier ( _43_optional _44_optional )  [precedence=left, level=8]
Rule 164   _43_optional -> NEWLINE
Rule 165   _43_optional -> <empty>
Rule 166   _44_optional -> exprs
Rule 167   _44_optional -> <empty>
Rule 168   exprs -> expr _45_optional
Rule 169   _45_optional -> NEWLINE
Rule 170   _45_optional -> <empty>
Rule 171   exprs -> exprs , _46_optional expr _47_optional
Rule 172   _46_optional -> NEWLINE
Rule 173   _46_optional -> <empty>
Rule 174   _47_optional -> NEWLINE
Rule 175   _47_optional -> <empty>
Rule 176   identifier -> IDENTIFIER
Rule 177   type_identifier -> TYPE_IDENTIFIER
Rule 178   let -> identifier _48_optional = expr  [precedence=right, level=1]
Rule 179   _48_optional -> : type
Rule 180   _48_optional -> <empty>
Rule 181   int_literal -> INT
Rule 182   float_literal -> FLOAT
Rule 183   str_literal -> STRING

Terminals, with rules where they appear:

(                    : 10 51 58 107 140 158 163
)                    : 10 51 58 107 140 158 163
*                    : 38
+                    : 41
,                    : 63 73 83 95 112 148 171
-                    : 27 40
/                    : 39
:                    : 44 56 68 114 117 179
<                    : 37 58 78 90
=                    : 178
>                    : 32 58 78 90
CASE                 : 125
CONCAT               : 42
DEF                  : 51 58
DO                   : 43
ELIF                 : 121
ELSE                 : 124
END                  : 43 116 125
ENUM                 : 85 90
EQUAL                : 29
EXTERNAL             : 28
FLOAT                : 182
FLOAT_DIV            : 34
FLOAT_MUL            : 33
FLOAT_SUB            : 35
FLOAT_SUM            : 36
IDENTIFIER           : 176
IF                   : 116
INT                  : 181
NEWLINE              : 2 7 9 47 52 64 71 74 76 86 96 101 104 126 131 134 141 146 149 151 154 159 164 169 172 174
NOT_EQUAL            : 30
OF                   : 125
STRING               : 183
THEN                 : 116 121
TYPE_IDENTIFIER      : 177
[                    : 153
]                    : 153
error                : 
{                    : 85 90
|                    : 31
}                    : 85 90

Nonterminals, with rules where they appear:

_10_item             : 61 62
_10_items            : 59 61
_10_repeat           : 58
_11_optional         : 58
_12_optional         : 58
_13_optional         : 58
_14_optional         : 70
_15_optional         : 73
_16_optional         : 73
_17_item             : 81 82
_17_items            : 79 81
_17_repeat           : 78
_18_optional         : 85
_19_optional         : 85
_1_optional          : 1
_20_item             : 93 94
_20_items            : 91 93
_20_repeat           : 90
_21_optional         : 90
_22_optional         : 90
_23_optional         : 100
_24_optional         : 103
_25_item             : 110 111
_25_items            : 108 110
_25_repeat           : 107
_26_optional         : 113
_27_optional         : 116
_28_optional         : 116
_29_optional         : 121
_2_optional          : 1
_30_optional         : 125
_31_optional         : 125
_32_optional         : 130
_33_optional         : 133
_34_optional         : 140
_35_optional         : 140
_36_optional         : 145
_37_optional         : 148
_38_optional         : 148
_39_optional         : 153
_3_optional          : 6
_40_optional         : 153
_41_optional         : 158
_42_optional         : 158
_43_optional         : 163
_44_optional         : 163
_45_optional         : 168
_46_optional         : 171
_47_optional         : 171
_48_optional         : 178
_4_optional          : 43
_5_optional          : 46
_6_optional          : 46
_7_optional          : 51
_8_optional          : 51
_9_optional          : 51
array                : 15
binary_expr          : 21
block_statement      : 43 116 121 124
call                 : 19
case_of              : 20
cases                : 128 133
def_expr             : 23
do                   : 24 51 58 130 133
do_exprs             : 4 9 49
enum                 : 26
expr                 : 6 9 10 27 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 116 121 125 158 168 171 178
exprs                : 156 161 166 171
external             : 25
float_literal        : 13
identifier           : 17 51 58 113 138 178
if_expr              : 22
int_literal          : 14
let                  : 18
match_as             : 137
match_variant        : 136
or_else              : 119 122
param                : 70 73
params               : 54 66 73
pattern              : 130 133 145 148
patterns             : 143 148
program              : 0
str_literal          : 12
type                 : 44 56 68 78 83 107 112 114 117 179
type_identifier      : 58 63 78 84 85 90 90 95 106 107 139 140 163
unary_expr           : 11
variant              : 100 103
variant_call         : 16
variants             : 88 98 103


state 0

    (0) S' -> . program
    (1) program -> . _1_optional _2_optional
    (2) _1_optional -> . NEWLINE
    (3) _1_optional -> .
    NEWLINE         shift and go to state 3
    (               reduce using rule 3 (_1_optional -> .)
    -               reduce using rule 3 (_1_optional -> .)
    STRING          reduce using rule 3 (_1_optional -> .)
    FLOAT           reduce using rule 3 (_1_optional -> .)
    INT             reduce using rule 3 (_1_optional -> .)
    [               reduce using rule 3 (_1_optional -> .)
    IDENTIFIER      reduce using rule 3 (_1_optional -> .)
    CASE            reduce using rule 3 (_1_optional -> .)
    IF              reduce using rule 3 (_1_optional -> .)
    DEF             reduce using rule 3 (_1_optional -> .)
    DO              reduce using rule 3 (_1_optional -> .)
    EXTERNAL        reduce using rule 3 (_1_optional -> .)
    ENUM            reduce using rule 3 (_1_optional -> .)
    TYPE_IDENTIFIER reduce using rule 3 (_1_optional -> .)
    $end            reduce using rule 3 (_1_optional -> .)

    program                        shift and go to state 1
    _1_optional                    shift and go to state 2

state 1

    (0) S' -> program .


state 2

    (1) program -> _1_optional . _2_optional
    (4) _2_optional -> . do_exprs
    (5) _2_optional -> .
    (6) do_exprs -> . expr _3_optional
    (9) do_exprs -> . expr NEWLINE do_exprs
    (10) expr -> . ( expr )
    (11) expr -> . unary_expr
    (12) expr -> . str_literal
    (13) expr -> . float_literal
    (14) expr -> . int_literal
    (15) expr -> . array
    (16) expr -> . variant_call
    (17) expr -> . identifier
    (18) expr -> . let
    (19) expr -> . call
    (20) expr -> . case_of
    (21) expr -> . binary_expr
    (22) expr -> . if_expr
    (23) expr -> . def_expr
    (24) expr -> . do
    (25) expr -> . external
    (26) expr -> . enum
    (27) unary_expr -> . - expr
    (183) str_literal -> . STRING
    (182) float_literal -> . FLOAT
    (181) int_literal -> . INT
    (153) array -> . [ _39_optional _40_optional ]
    (163) variant_call -> . type_identifier ( _43_optional _44_optional )
    (176) identifier -> . IDENTIFIER
    (178) let -> . identifier _48_optional = expr
    (158) call -> . expr ( _41_optional _42_optional )
    (125) case_of -> . CASE expr OF _30_optional _31_optional END
    (29) binary_expr -> . expr EQUAL expr
    (30) binary_expr -> . expr NOT_EQUAL expr
    (31) binary_expr -> . expr | expr
    (32) binary_expr -> . expr > expr
    (33) binary_expr -> . expr FLOAT_MUL expr
    (34) binary_expr -> . expr FLOAT_DIV expr
    (35) binary_expr -> . expr FLOAT_SUB expr
    (36) binary_expr -> . expr FLOAT_SUM expr
    (37) binary_expr -> . expr < expr
    (38) binary_expr -> . expr * expr
    (39) binary_expr -> . expr / expr
    (40) binary_expr -> . expr - expr
    (41) binary_expr -> . expr + expr
    (42) binary_expr -> . expr CONCAT expr
    (116) if_expr -> . IF expr THEN _27_optional block_statement _28_optional END
    (51) def_expr -> . DEF identifier ( _7_optional _8_optional ) _9_optional do
    (58) def_expr -> . DEF identifier < type_identifier _10_repeat > ( _11_optional _12_optional ) _13_optional do
    (43) do -> . DO _4_optional block_statement END
    (28) external -> . EXTERNAL
    (85) enum -> . ENUM type_identifier { _18_optional _19_optional }
    (90) enum -> . ENUM type_identifier < type_identifier _20_repeat > { _21_optional _22_optional }
    (177) type_identifier -> . TYPE_IDENTIFIER
    $end            reduce using rule 5 (_2_optional -> .)
    (               shift and go to state 7
    -               shift and go to state 24
    STRING          shift and go to state 25
    FLOAT           shift and go to state 26
    INT             shift and go to state 27
    [               shift and go to state 28
    IDENTIFIER      shift and go to state 30
    CASE            shift and go to state 31
    IF              shift and go to state 32
    DEF             shift and go to state 33
    DO              shift and go to state 34
    EXTERNAL        shift and go to state 35
    ENUM            shift and go to state 36
    TYPE_IDENTIFIER shift and go to state 37

    _2_optional                    shift and go to state 4
    do_exprs                       shift and go to state 5
    expr                           shift and go to state 6
    unary_expr                     shift and go to state 8
    str_literal                    shift and go to state 9
    float_literal                  shift and go to state 10
    int_literal                    shift and go to state 11
    array                          shift and go to state 12
    variant_call                   shift and go to state 13
    identifier                     shift and go to state 14
    let                            shift and go to state 15
    call                           shift and go to state 16
    case_of                        shift and go to state 17
    binary_expr                    shift and go to state 18
    if_expr                        shift and go to state 19
    def_expr                       shift and go to state 20
    do                             shift and go to state 21
    external                       shift and go to state 22
    enum                           shift and go to state 23
    type_identifier                shift and go to state 29

state 3

    (2) _1_optional -> NEWLINE .
    (               reduce using rule 2 (_1_optional -> NEWLINE .)
    -               reduce using rule 2 (_1_optional -> NEWLINE .)
    STRING          reduce using rule 2 (_1_optional -> NEWLINE .)
    FLOAT           reduce using rule 2 (_1_optional -> NEWLINE .)
    INT             reduce using rule 2 (_1_optional -> NEWLINE .)
    [               reduce using rule 2 (_1_optional -> NEWLINE .)
    IDENTIFIER      reduce using rule 2 (_1_optional -> NEWLINE .)
    CASE            reduce using rule 2 (_1_optional -> NEWLINE .)
    IF              reduce using rule 2 (_1_optional -> NEWLINE .)
    DEF             reduce using rule 2 (_1_optional -> NEWLINE .)
    DO              reduce using rule 2 (_1_optional -> NEWLINE .)
    EXTERNAL        reduce using rule 2 (_1_optional -> NEWLINE .)
    ENUM            reduce using rule 2 (_1_optional -> NEWLINE .)
    TYPE_IDENTIFIER reduce using rule 2 (_1_optional -> NEWLINE .)
    $end            reduce using rule 2 (_1_optional -> NEWLINE .)


state 4

    (1) program -> _1_optional _2_optional .
    $end            reduce using rule 1 (program -> _1_optional _2_optional .)


state 5

    (4) _2_optional -> do_exprs .
    $end            reduce using rule 4 (_2_optional -> do_exprs .)


state 6

    (6) do_exprs -> expr . _3_optional
    (9) do_exprs -> expr . NEWLINE do_exprs
    (158) call -> expr . ( _41_optional _42_optional )
    (29) binary_expr -> expr . EQUAL expr
    (30) binary_expr -> expr . NOT_EQUAL expr
    (31) binary_expr -> expr . | expr
    (32) binary_expr -> expr . > expr
    (33) binary_expr -> expr . FLOAT_MUL expr
    (34) binary_expr -> expr . FLOAT_DIV expr
    (35) binary_expr -> expr . FLOAT_SUB expr
    (36) binary_expr -> expr . FLOAT_SUM expr
    (37) binary_expr -> expr . < expr
    (38) binary_expr -> expr . * expr
    (39) binary_expr -> expr . / expr
    (40) binary_expr -> expr . - expr
    (41) binary_expr -> expr . + expr
    (42) binary_expr -> expr . CONCAT expr
    (7) _3_optional -> . NEWLINE
    (8) _3_optional -> .
    NEWLINE         shift and go to state 39
    (               shift and go to state 40
    EQUAL           shift and go to state 41
    NOT_EQUAL       shift and go to state 42
    |               shift and go to state 43
    >               shift and go to state 44
    FLOAT_MUL       shift and go to state 45
    FLOAT_DIV       shift and go to state 46
    FLOAT_SUB       shift and go to state 47
    FLOAT_SUM       shift and go to state 48
    <               shift and go to state 49
    *               shift and go to state 50
    /               shift and go to state 51
    -               shift and go to state 52
    +               shift and go to state 53
    CONCAT          shift and go to state 54
    $end            reduce using rule 8 (_3_optional -> .)
    END             reduce using rule 8 (_3_optional -> .)
    ELIF            reduce using rule 8 (_3_optional -> .)
    ELSE            reduce using rule 8 (_3_optional -> .)

    _3_optional                    shift and go to state 38

state 7

    (10) expr -> ( . expr )
    (10) expr -> . ( expr )
    (11) expr -> . unary_expr
    (12) expr -> . str_literal
    (13) expr -> . float_literal
    (14) expr -> . int_literal
    (15) expr -> . array
    (16) expr -> . variant_call
    (17) expr -> . identifier
    (18) expr -> . let
    (19) expr -> . call
    (20) expr -> . case_of
    (21) expr -> . binary_expr
    (22) expr -> . if_expr
    (23) expr -> . def_expr
    (24) expr -> . do
    (25) expr -> . external
    (26) expr -> . enum
    (27) unary_expr -> . - expr
    (183) str_literal -> . STRING
    (182) float_literal -> . FLOAT
    (181) int_literal -> . INT
    (153) array -> . [ _39_optional _40_optional ]
    (163) variant_call -> . type_identifier ( _43_optional _44_optional )
    (176) identifier -> . IDENTIFIER
    (178) let -> . identifier _48_optional = expr
    (158) call -> . expr ( _41_optional _42_optional )
    (125) case_of -> . CASE expr OF _30_optional _31_optional END
    (29) binary_expr -> . expr EQUAL expr
    (30) binary_expr -> . expr NOT_EQUAL expr
    (31) binary_expr -> . expr | expr
    (32) binary_expr -> . expr > expr
    (33) binary_expr -> . expr FLOAT_MUL expr
    (34) binary_expr -> . expr FLOAT_DIV expr
    (35) binary_expr -> . expr FLOAT_SUB expr
    (36) binary_expr -> . expr FLOAT_SUM expr
    (37) binary_expr -> . expr < expr
    (38) binary_expr -> . expr * expr
    (39) binary_expr -> . expr / expr
    (40) binary_expr -> . expr - expr
    (41) binary_expr -> . expr + expr
    (42) binary_expr -> . expr CONCAT expr
    (116) if_expr -> . IF expr THEN _27_optional block_statement _28_optional END
    (51) def_expr -> . DEF identifier ( _7_optional _8_optional ) _9_optional do
    (58) def_expr -> . DEF identifier < type_identifier _10_repeat > ( _11_optional _12_optional ) _13_optional do
    (43) do -> . DO _4_optional block_statement END
    (28) external -> . EXTERNAL
    (85) enum -> . ENUM type_identifier { _18_optional _19_optional }
    (90) enum -> . ENUM type_identifier < type_identifier _20_repeat > { _21_optional _22_optional }
    (177) type_identifier -> . TYPE_IDENTIFIER
    (               shift and go to state 7
    -               shift and go to state 24
    STRING          shift and go to state 25
    FLOAT           shift and go to state 26
    INT             shift and go to state 27
    [               shift and go to state 28
    IDENTIFIER      shift and go to state 30
    CASE            shift and go to state 31
    IF              shift and go to state 32
    DEF             shift and go to state 33
    DO              shift and go to state 34
    EXTERNAL        shift and go to state 35
    ENUM            shift and go to state 36
    TYPE_IDENTIFIER shift and go to state 37

    expr                           shift and go to state 55
    unary_expr                     shift and go to state 8
    str_literal                    shift and go to state 9
    float_literal                  shift and go to state 10
    int_literal                    shift and go to state 11
    array                          shift and go to state 12
    variant_call                   shift and go to state 13
    identifier                     shift and go to state 14
    let                            shift and go to state 15
    call                           shift and go to state 16
    case_of                        shift and go to state 17
    binary_expr                    shift and go to state 18
    if_expr                        shift and go to state 19
    def_expr                       shift and go to state 20
    do                             shift and go to state 21
    external                       shift and go to state 22
    enum                           shift and go to state 23
    type_identifier                shift and go to state 29

state 8

    (11) expr -> unary_expr .
    NEWLINE         reduce using rule 11 (expr -> unary_expr .)
    (               reduce using rule 11 (expr -> unary_expr .)
    EQUAL           reduce using rule 11 (expr -> unary_expr .)
    NOT_EQUAL       reduce using rule 11 (expr -> unary_expr .)
    |               reduce using rule 11 (expr -> unary_expr .)
    >               reduce using rule 11 (expr -> unary_expr .)
    FLOAT_MUL       reduce using rule 11 (expr -> unary_expr .)
    FLOAT_DIV       reduce using rule 11 (expr -> unary_expr .)
    FLOAT_SUB       reduce using rule 11 (expr -> unary_expr .)
    FLOAT_SUM       reduce using rule 11 (expr -> unary_expr .)
    <               reduce using rule 11 (expr -> unary_expr .)
    *               reduce using rule 11 (expr -> unary_expr .)
    /               reduce using rule 11 (expr -> unary_expr .)
    -               reduce using rule 11 (expr -> unary_expr .)
    +               reduce using rule 11 (expr -> unary_expr .)
    CONCAT          reduce using rule 11 (expr -> unary_expr .)
    $end            reduce using rule 11 (expr -> unary_expr .)
    )               reduce using rule 11 (expr -> unary_expr .)
    OF              reduce using rule 11 (expr -> unary_expr .)
    THEN            reduce using rule 11 (expr -> unary_expr .)
    END             reduce using rule 11 (expr -> unary_expr .)
    ELIF            reduce using rule 11 (expr -> unary_expr .)
    ELSE            reduce using rule 11 (expr -> unary_expr .)
    ,               reduce using rule 11 (expr -> unary_expr .)
    ]               reduce using rule 11 (expr -> unary_expr .)


state 9

    (12) expr -> str_literal .
    NEWLINE         reduce using rule 12 (expr -> str_literal .)
    (               reduce using rule 12 (expr -> str_literal .)
    EQUAL           reduce using rule 12 (expr -> str_literal .)
    NOT_EQUAL       reduce using rule 12 (expr -> str_literal .)
    |               reduce using rule 12 (expr -> str_literal .)
    >               reduce using rule 12 (expr -> str_literal .)
    FLOAT_MUL       reduce using rule 12 (expr -> str_literal .)
    FLOAT_DIV       reduce using rule 12 (expr -> str_literal .)
    FLOAT_SUB       reduce using rule 12 (expr -> str_literal .)
    FLOAT_SUM       reduce using rule 12 (expr -> str_literal .)
    <               reduce using rule 12 (expr -> str_literal .)
    *               reduce using rule 12 (expr -> str_literal .)
    /               reduce using rule 12 (expr -> str_literal .)
    -               reduce using rule 12 (expr -> str_literal .)
    +               reduce using rule 12 (expr -> str_literal .)
    CONCAT          reduce using rule 12 (expr -> str_literal .)
    $end            reduce using rule 12 (expr -> str_literal .)
    )               reduce using rule 12 (expr -> str_literal .)
    OF              reduce using rule 12 (expr -> str_literal .)
    THEN            reduce using rule 12 (expr -> str_literal .)
    END             reduce using rule 12 (expr -> str_literal .)
    ELIF            reduce using rule 12 (expr -> str_literal .)
    ELSE            reduce using rule 12 (expr -> str_literal .)
    ,               reduce using rule 12 (expr -> str_literal .)
    ]               reduce using rule 12 (expr -> str_literal .)


state 10

    (13) expr -> float_literal .
    NEWLINE         reduce using rule 13 (expr -> float_literal .)
    (               reduce using rule 13 (expr -> float_literal .)
    EQUAL           reduce using rule 13 (expr -> float_literal .)
    NOT_EQUAL       reduce using rule 13 (expr -> float_literal .)
    |               reduce using rule 13 (expr -> float_literal .)
    >               reduce using rule 13 (expr -> float_literal .)
    FLOAT_MUL       reduce using rule 13 (expr -> float_literal .)
    FLOAT_DIV       reduce using rule 13 (expr -> float_literal .)
    FLOAT_SUB       reduce using rule 13 (expr -> float_literal .)
    FLOAT_SUM       reduce using rule 13 (expr -> float_literal .)
    <               reduce using rule 13 (expr -> float_literal .)
    *               reduce using rule 13 (expr -> float_literal .)
    /               reduce using rule 13 (expr -> float_literal .)
    -               reduce using rule 13 (expr -> float_literal .)
    +               reduce using rule 13 (expr -> float_literal .)
    CONCAT          reduce using rule 13 (expr -> float_literal .)
    $end            reduce using rule 13 (expr -> float_literal .)
    )               reduce using rule 13 (expr -> float_literal .)
    OF              reduce using rule 13 (expr -> float_literal .)
    THEN            reduce using rule 13 (expr -> float_literal .)
    END             reduce using rule 13 (expr -> float_literal .)
    ELIF            reduce using rule 13 (expr -> float_literal .)
    ELSE            reduce using rule 13 (expr -> float_literal .)
    ,               reduce using rule 13 (expr -> float_literal .)
    ]               reduce using rule 13 (expr -> float_literal .)


state 11

    (14) expr -> int_literal .
    NEWLINE         reduce using rule 14 (expr -> int_literal .)
    (               reduce using rule 14 (expr -> int_literal .)
    EQUAL           reduce using rule 14 (expr -> int_literal .)
    NOT_EQUAL       reduce using rule 14 (expr -> int_literal .)
    |               reduce using rule 14 (expr -> int_literal .)
    >               reduce using rule 14 (expr -> int_literal .)
    FLOAT_MUL       reduce using rule 14 (expr -> int_literal .)
    FLOAT_DIV       reduce using rule 14 (expr -> int_literal .)
    FLOAT_SUB       reduce using rule 14 (expr -> int_literal .)
    FLOAT_SUM       reduce using rule 14 (expr -> int_literal .)
    <               reduce using rule 14 (expr -> int_literal .)
    *               reduce using rule 14 (expr -> int_literal .)
    /               reduce using rule 14 (expr -> int_literal .)
    -               reduce using rule 14 (expr -> int_literal .)
    +               reduce using rule 14 (expr -> int_literal .)
    CONCAT          reduce using rule 14 (expr -> int_literal .)
    $end            reduce using rule 14 (expr -> int_literal .)
    )               reduce using rule 14 (expr -> int_literal .)
    OF              reduce using rule 14 (expr -> int_literal .)
    THEN            reduce using rule 14 (expr -> int_literal .)
    END             reduce using rule 14 (expr -> int_literal .)
    ELIF            reduce using rule 14 (expr -> int_literal .)
    ELSE            reduce using rule 14 (expr -> int_literal .)
    ,               reduce using rule 14 (expr -> int_literal .)
    ]               reduce using rule 14 (expr -> int_literal .)


state 12

    (15) expr -> array .
    NEWLINE         reduce using rule 15 (expr -> array .)
    (               reduce using rule 15 (expr -> array .)
    EQUAL           reduce using rule 15 (expr -> array .)
    NOT_EQUAL       reduce using rule 15 (expr -> array .)
    |               reduce using rule 15 (expr -> array .)
    >               reduce using rule 15 (expr -> array .)
    FLOAT_MUL       reduce using rule 15 (expr -> array .)
    FLOAT_DIV       reduce using rule 15 (expr -> array .)
    FLOAT_SUB       reduce using rule 15 (expr -> array .)
    FLOAT_SUM       reduce using rule 15 (expr -> array .)
    <               reduce using rule 15 (expr -> array .)
    *               reduce using rule 15 (expr -> array .)
    /               reduce using rule 15 (expr -> array .)
    -               reduce using rule 15 (expr -> array .)
    +               reduce using rule 15 (expr -> array .)
    CONCAT          reduce using rule 15 (expr -> array .)
    $end            reduce using rule 15 (expr -> array .)
    )               reduce using rule 15 (expr -> array .)
    OF              reduce using rule 15 (expr -> array .)
    THEN            reduce using rule 15 (expr -> array .)
    END             reduce using rule 15 (expr -> array .)
    ELIF            reduce using rule 15 (expr -> array .)
    ELSE            reduce using rule 15 (expr -> array .)
    ,               reduce using rule 15 (expr -> array .)
    ]               reduce using rule 15 (expr -> array .)


state 13

    (16) expr -> variant_call .
    NEWLINE         reduce using rule 16 (expr -> variant_call .)
    (               reduce using rule 16 (expr -> variant_call .)
    EQUAL           reduce using rule 16 (expr -> variant_call .)
    NOT_EQUAL       reduce using rule 16 (expr -> variant_call .)
    |               reduce using rule 16 (expr -> variant_call .)
    >               reduce using rule 16 (expr -> variant_call .)
    FLOAT_MUL       reduce using rule 16 (expr -> variant_call .)
    FLOAT_DIV       reduce using rule 16 (expr -> variant_call .)
    FLOAT_SUB       reduce using rule 16 (expr -> variant_call .)
    FLOAT_SUM       reduce using rule 16 (expr -> variant_call .)
    <               reduce using rule 16 (expr -> variant_call .)
    *               reduce using rule 16 (expr -> variant_call .)
    /               reduce using rule 16 (expr -> variant_call .)
    -               reduce using rule 16 (expr -> variant_call .)
    +               reduce using rule 16 (expr -> variant_call .)
    CONCAT          reduce using rule 16 (expr -> variant_call .)
    $end            reduce using rule 16 (expr -> variant_call .)
    )               reduce using rule 16 (expr -> variant_call .)
    OF              reduce using rule 16 (expr -> variant_call .)
    THEN            reduce using rule 16 (expr -> variant_call .)
    END             reduce using rule 16 (expr -> variant_call .)
    ELIF            reduce using rule 16 (expr -> variant_call .)
    ELSE            reduce using rule 16 (expr -> variant_call .)
    ,               reduce using rule 16 (expr -> variant_call .)
    ]               reduce using rule 16 (expr -> variant_call .)


state 14
